[package]
name = "kuretiki-chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
openai-api = "0.1.4"
serenity = "0.11.6"
string-join = "0.1.2"
textwrap-macros = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
